--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
 <a href="http://localhost:8080/oauth/authorize?response_type=token&client_id=acme&redirect_uri=http%3A%2F%2Flocalhost%3A4201%2Fconnect%2F&scope=read">login</a>
 
-<a (click)="bla()">Request resource Server 1</a>
-
-
+<br/><br/>
+<a (click)="bla()">Request</a>
+<br/><br/>
+Logged in as: {{user.username}} // {{user.email}}
+<br/><br/>
+ResourceServer1 Response: {{rs1response.property1}}
 <router-outlet></router-outlet>
