--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
-<a href="http://localhost:8080/oauth/authorize?response_type=token&client_id=acme&redirect_uri=http%3A%2F%2Flocalhost%3A4201%2Fconnect%2F&scope=read write">login</a>
+<a href="http://localhost:8080/oauth/authorize?response_type=token&client_id=acme&redirect_uri=http%3A%2F%2Flocalhost%2Fconnect%2F&scope=read write">login</a>
 
 <br/><br/>
 <a (click)="bla()">Request</a>
 <br/><br/>
-Logged in as: {{user.username}} // {{user.email}}
+Logged in as: 
 <br/><br/>
 ResourceServer1 Response: <br/>
 <div *ngFor="let e of rs1response">
