--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a href="http://localhost:8080/oauth/authorize?response_type=token&client_id=acme&redirect_uri=http%3A%2F%2Flocalhost%2Fconnect%2F&scope=read write">login</a>
+<a href="http://fseebach:8081/oauth/authorize?response_type=token&client_id=acme&redirect_uri=http%3A%2F%2Ffseebach.de%2Fconnect%2F&scope=read write">login</a>
 
 <br/><br/>
 <a (click)="bla()">Request</a>
