--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,2 @@
-<a href="https://auth.fseebach.de/oauth/authorize?response_type=token&client_id=acme&redirect_uri=https%3A%2F%2Fapp.fseebach.de%2Fconnect%2F&scope=read write">login</a>
-
-<br/><br/>
-<a (click)="bla()">Request</a>
-<br/><br/>
-Logged in as: 
-<br/><br/>
-ResourceServer1 Response: <br/>
-<div *ngFor="let e of rs1response">
-    {{e.property1}}
-</div>
-
+<app-profile></app-profile>
 <router-outlet></router-outlet>
